<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/beige"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_artifact"
            android:textColor="@color/olive"
            android:fontFamily="@font/idiqlat_regular"
            android:textSize="24sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="16dp">

            <!-- A ScrollView can only have one direct child -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/olive"
                    android:alpha="0.67"
                    android:backgroundTint="@color/olive" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/olive"
                    android:alpha="0.67"
                    android:backgroundTint="@color/olive" />

                <EditText
                    android:id="@+id/edit_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/category"
                    android:textColorHint="@color/olive"
                    android:alpha="0.67"
                    android:backgroundTint="@color/olive" />

                <EditText
                    android:id="@+id/edit_material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/material"
                    android:textColorHint="@color/olive"
                    android:alpha="0.67"
                    android:backgroundTint="@color/olive" />

                <EditText
                    android:id="@+id/edit_dynasty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/dynasty"
                    android:textColorHint="@color/olive"
                    android:alpha="0.67"
                    android:backgroundTint="@color/olive" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/olive" />

            <Button
                android:id="@+id/save_artifact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/olive" />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
