<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:paddingVertical="6dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/beige"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/comment_profile_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|start"
        android:layout_margin="10dp"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_pfp"
        app:shapeAppearanceOverlay="@style/CircleImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/comment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/comm_name_placeholder"
        android:fontFamily="@font/idiqlat_regular"
        android:textColor="@color/olive"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/comment_profile_picture"
        app:layout_constraintTop_toTopOf="@id/comment_profile_picture"
        app:layout_constraintBottom_toBottomOf="@id/comment_profile_picture"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/comment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/comm_date_placeholder"
        android:fontFamily="@font/idiqlat_extralight"
        android:textColor="@color/olive"
        android:alpha="0.67"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/comment_profile_picture"
        app:layout_constraintBottom_toBottomOf="@id/comment_profile_picture"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/comment_body"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="7dp"
        android:paddingBottom="15dp"
        android:text="@string/comm_text_placeholder"
        android:fontFamily="@font/idiqlat_extralight"
        android:textColor="@color/olive"
        android:alpha="0.7"
        android:textSize="14sp"
        android:lineHeight="18dp"
        app:layout_constraintStart_toStartOf="@id/comment_profile_picture"
        app:layout_constraintTop_toBottomOf="@id/comment_profile_picture" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        android:src="@drawable/x_icon"
        app:tint="@color/olive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>